# multi-account-github-mcp

./: .gitignore  Cargo.toml  README.md  multi-account-github-mcp.yml  multi-account-github-mcp.yml.example
docs/: implementation.md
src/: cli.rs  config.rs  error.rs  gh.rs  lib.rs  main.rs
src/mcp/: mod.rs  server.rs
src/tools/: account.rs  branches.rs  code.rs  mod.rs  protection.rs  prs.rs  releases.rs  repos.rs  tags.rs  teams.rs  workflows.rs
