[package]
name = "multi-account-github-mcp"
version = "0.1.1"
edition = "2024"
authors = ["Scott Idler <scott.idler@gmail.com>"]
build = "build.rs"
description = "GitHub MCP server with multi-account support, wrapping gh CLI"
license = "MIT"

[lib]
name = "multi_account_github_mcp"
path = "src/lib.rs"

[[bin]]
name = "multi-account-github-mcp"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
eyre = "0.6"
rmcp = { version = "0.12", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7.0"

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
